--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
     <script>
         function change(){
             document.getElementById('index-container').style.display="none";
-            document.getElementById('container').style.display="block";
+            document.getElementById('container').style.display="flex";
         }
         function interface(){
-            document.getElementById('index-container').style.display="block";
+            document.getElementById('index-container').style.display="flex";
             document.getElementById('container').style.display="none";
         }
         const apikey="c57499227af25f04b8e10f3add7ae611";
